@@ -1,6 +1,6 @@
 package net.momirealms.craftengine.bukkit.plugin.user;
 
-import ca.spottedleaf.concurrentutil.map.ConcurrentLong2ReferenceChainedHashTable;
+import ca.spottedleaf.concurrentutil.map.concurrent.longs.ConcurrentChainedLong2ReferenceHashTable;
 import com.google.common.cache.Cache;
 import com.google.common.cache.CacheBuilder;
 import com.google.common.collect.Lists;
@@ -13,23 +13,32 @@ import it.unimi.dsi.fastutil.longs.LongOpenHashSet;
 import net.kyori.adventure.text.Component;
 import net.momirealms.craftengine.bukkit.api.BukkitAdaptor;
 import net.momirealms.craftengine.bukkit.api.CraftEngineFurniture;
+import net.momirealms.craftengine.bukkit.block.entity.renderer.display.BukkitDestroyStageDisplayRecorder;
+import net.momirealms.craftengine.bukkit.entity.BukkitLivingEntity;
 import net.momirealms.craftengine.bukkit.entity.furniture.BukkitFurniture;
 import net.momirealms.craftengine.bukkit.item.BukkitItem;
 import net.momirealms.craftengine.bukkit.item.BukkitItemManager;
+import net.momirealms.craftengine.bukkit.nms.DelegatingContainer;
 import net.momirealms.craftengine.bukkit.plugin.BukkitCraftEngine;
 import net.momirealms.craftengine.bukkit.plugin.gui.CraftEngineGUIHolder;
 import net.momirealms.craftengine.bukkit.plugin.network.BukkitNetworkManager;
+import net.momirealms.craftengine.bukkit.plugin.network.handler.PlayerPacketHandler;
 import net.momirealms.craftengine.bukkit.util.*;
+import net.momirealms.craftengine.bukkit.world.BukkitContainer;
 import net.momirealms.craftengine.bukkit.world.WorldlyContainerHolder;
 import net.momirealms.craftengine.core.advancement.AdvancementType;
+import net.momirealms.craftengine.core.attribute.damage.DamageVisibility;
 import net.momirealms.craftengine.core.block.BlockStateWrapper;
 import net.momirealms.craftengine.core.block.ImmutableBlockState;
 import net.momirealms.craftengine.core.block.entity.render.ConstantBlockEntityRenderer;
+import net.momirealms.craftengine.core.block.entity.render.DynamicBlockEntityRenderer;
+import net.momirealms.craftengine.core.block.entity.render.display.DestroyStageDisplayEntity;
+import net.momirealms.craftengine.core.block.entity.render.display.DestroyStageDisplayEntitySetting;
+import net.momirealms.craftengine.core.block.entity.render.display.DestroyStageDisplayRecorder;
 import net.momirealms.craftengine.core.entity.culling.Cullable;
 import net.momirealms.craftengine.core.entity.culling.CullableHolder;
 import net.momirealms.craftengine.core.entity.culling.CullingData;
 import net.momirealms.craftengine.core.entity.culling.EntityCulling;
-import net.momirealms.craftengine.core.entity.data.EntityData;
 import net.momirealms.craftengine.core.entity.furniture.FurnitureVariant;
 import net.momirealms.craftengine.core.entity.furniture.behavior.FurnitureLightData;
 import net.momirealms.craftengine.core.entity.furniture.hitbox.FurnitureHitBoxConfig;
@@ -53,17 +62,17 @@ import net.momirealms.craftengine.core.registry.BuiltInRegistries;
 import net.momirealms.craftengine.core.sound.SoundData;
 import net.momirealms.craftengine.core.sound.SoundSource;
 import net.momirealms.craftengine.core.util.*;
+import net.momirealms.craftengine.core.util.random.RandomUtils;
 import net.momirealms.craftengine.core.world.*;
-import net.momirealms.craftengine.core.world.World;
 import net.momirealms.craftengine.core.world.chunk.client.ClientChunk;
 import net.momirealms.craftengine.core.world.collision.AABB;
 import net.momirealms.craftengine.proxy.bukkit.craftbukkit.CraftWorldProxy;
 import net.momirealms.craftengine.proxy.bukkit.craftbukkit.entity.CraftEntityProxy;
+import net.momirealms.craftengine.proxy.minecraft.core.HolderProxy;
 import net.momirealms.craftengine.proxy.minecraft.network.ConnectionProxy;
 import net.momirealms.craftengine.proxy.minecraft.network.protocol.common.ClientboundResourcePackPopPacketProxy;
 import net.momirealms.craftengine.proxy.minecraft.network.protocol.game.*;
 import net.momirealms.craftengine.proxy.minecraft.network.protocol.login.ClientboundLoginDisconnectPacketProxy;
-import net.momirealms.craftengine.proxy.minecraft.network.syncher.SynchedEntityDataProxy;
 import net.momirealms.craftengine.proxy.minecraft.server.MinecraftServerProxy;
 import net.momirealms.craftengine.proxy.minecraft.server.level.ServerLevelProxy;
 import net.momirealms.craftengine.proxy.minecraft.server.level.ServerPlayerGameModeProxy;
@@ -73,68 +82,72 @@ import net.momirealms.craftengine.proxy.minecraft.server.network.ServerConfigura
 import net.momirealms.craftengine.proxy.minecraft.server.network.ServerGamePacketListenerImplProxy;
 import net.momirealms.craftengine.proxy.minecraft.server.network.config.JoinWorldTaskProxy;
 import net.momirealms.craftengine.proxy.minecraft.server.network.config.ServerResourcePackConfigurationTaskProxy;
-import net.momirealms.craftengine.proxy.minecraft.sounds.SoundEventProxy;
+import net.momirealms.craftengine.proxy.minecraft.sounds.SoundSourceProxy;
 import net.momirealms.craftengine.proxy.minecraft.util.thread.BlockableEventLoopProxy;
+import net.momirealms.craftengine.proxy.minecraft.world.InteractionHandProxy;
 import net.momirealms.craftengine.proxy.minecraft.world.effect.MobEffectsProxy;
 import net.momirealms.craftengine.proxy.minecraft.world.entity.EntityProxy;
+import net.momirealms.craftengine.proxy.minecraft.world.entity.EntityTypesProxy;
 import net.momirealms.craftengine.proxy.minecraft.world.entity.LivingEntityProxy;
 import net.momirealms.craftengine.proxy.minecraft.world.entity.ai.attributes.AttributeInstanceProxy;
-import net.momirealms.craftengine.proxy.minecraft.world.entity.ai.attributes.AttributeModifierProxy;
 import net.momirealms.craftengine.proxy.minecraft.world.entity.ai.attributes.AttributesProxy;
 import net.momirealms.craftengine.proxy.minecraft.world.entity.player.AbilitiesProxy;
 import net.momirealms.craftengine.proxy.minecraft.world.entity.player.InventoryProxy;
 import net.momirealms.craftengine.proxy.minecraft.world.entity.player.PlayerProxy;
+import net.momirealms.craftengine.proxy.minecraft.world.inventory.AbstractContainerMenuProxy;
 import net.momirealms.craftengine.proxy.minecraft.world.inventory.InventoryMenuProxy;
+import net.momirealms.craftengine.proxy.minecraft.world.inventory.SlotProxy;
 import net.momirealms.craftengine.proxy.minecraft.world.item.ItemCooldownsProxy;
 import net.momirealms.craftengine.proxy.minecraft.world.level.BlockAndLightGetterProxy;
+import net.momirealms.craftengine.proxy.minecraft.world.level.BlockGetterProxy;
+import net.momirealms.craftengine.proxy.minecraft.world.level.ClipContextProxy;
 import net.momirealms.craftengine.proxy.minecraft.world.level.block.SoundTypeProxy;
 import net.momirealms.craftengine.proxy.minecraft.world.level.block.state.BlockBehaviourProxy;
 import net.momirealms.craftengine.proxy.minecraft.world.level.chunk.ChunkSourceProxy;
+import net.momirealms.craftengine.proxy.minecraft.world.phys.BlockHitResultProxy;
+import net.momirealms.craftengine.proxy.minecraft.world.phys.Vec3Proxy;
 import net.momirealms.craftengine.proxy.paper.chunk.system.entity.RegionizedPlayerChunkLoaderProxy;
-import org.bukkit.*;
-import org.bukkit.attribute.Attribute;
-import org.bukkit.attribute.AttributeInstance;
-import org.bukkit.block.Block;
-import org.bukkit.damage.DamageSource;
-import org.bukkit.damage.DamageType;
-import org.bukkit.entity.Entity;
-import org.bukkit.entity.EntityType;
+import org.bukkit.Bukkit;
+import org.bukkit.Location;
+import org.bukkit.Particle;
+import org.bukkit.Registry;
 import org.bukkit.event.player.PlayerCommandPreprocessEvent;
-import org.bukkit.event.player.PlayerTeleportEvent;
-import org.bukkit.inventory.EquipmentSlot;
 import org.bukkit.inventory.InventoryHolder;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.PlayerInventory;
 import org.bukkit.persistence.PersistentDataType;
-import org.bukkit.potion.PotionEffect;
-import org.bukkit.potion.PotionEffectType;
-import org.bukkit.util.RayTraceResult;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.io.ByteArrayOutputStream;
+import java.io.DataOutputStream;
 import java.io.IOException;
 import java.lang.ref.Reference;
 import java.lang.ref.WeakReference;
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.net.SocketAddress;
+import java.time.Duration;
+import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.TimeUnit;
 import java.util.function.Predicate;
 
-public class BukkitServerPlayer extends Player {
+public class BukkitServerPlayer extends BukkitLivingEntity implements Player {
     public static final Key SELECTED_LOCALE_KEY = Key.ce("locale");
     public static final Key ENTITY_CULLING_DISTANCE_SCALE = Key.ce("entity_culling_distance_scale");
     public static final Key DISPLAY_ENTITY_VIEW_DISTANCE_SCALE = Key.ce("display_entity_view_distance_scale");
     public static final Key ENABLE_ENTITY_CULLING = Key.ce("enable_entity_culling");
     public static final Key ENABLE_FURNITURE_DEBUG = Key.ce("enable_furniture_debug");
+    public static final Key DAMAGE_VISIBILITY = Key.ce("damage_visibility");
     private static final int CUSTOM_PAYLOAD_PLAY = BukkitNetworkManager.PACKET_IDS.clientboundCustomPayloadPacket$play();
     private static final int CUSTOM_PAYLOAD_CONFIG = BukkitNetworkManager.PACKET_IDS.clientboundCustomPayloadPacket$configuration();
     private final BukkitCraftEngine plugin;
 
     // connection state
     private final Channel channel;
+    private final Set<UUID> resourcePackUUID = Collections.synchronizedSet(new HashSet<>(4));
+    private final EntityCulling culling;
     private ChannelHandler connection;
     private InetAddress address;
     private String name;
@@ -146,13 +159,11 @@ public class BukkitServerPlayer extends Player {
     private ConnectionState decoderState = ConnectionState.HANDSHAKING; // inbound(decode|c2s)
     private ConnectionState encoderState = ConnectionState.HANDSHAKING; // outbound(encode|s2c)
     private boolean shouldProcessFinishConfiguration = true;
-    private final Set<UUID> resourcePackUUID = Collections.synchronizedSet(new HashSet<>());
     // some references
-    private Reference<org.bukkit.entity.Player> playerRef;
-    private Reference<Object> serverPlayerRef;
+    private Reference<org.bukkit.entity.Player> bukkitPlayerRef;
+    private Reference<Object> nmsPlayerRef;
     // client side dimension info
-    private World clientSideWorld;
-    // check main hand/offhand interaction
+    private World clientSideWorld;    // check main hand/offhand interaction
     private int lastSuccessfulInteraction;
     // to prevent duplicated events
     private int lastInteractEntityWithMainHand;
@@ -166,6 +177,9 @@ public class BukkitServerPlayer extends Player {
     private Object destroyedState;
     private boolean isDestroyingBlock;
     private boolean isDestroyingCustomBlock;
+    // client-side ItemDisplay used to visualize custom-block destroy progress when the
+    // block has a destroy_stages setting; null when no such display is active
+    private DestroyStageDisplayRecorder.Entry destroyStageEntry;
     private boolean swingHandAck;
     private int lastSwingHandTick;
     private float miningProgress;
@@ -178,17 +192,23 @@ public class BukkitServerPlayer extends Player {
     private IntIdentityList blockList = new IntIdentityList(BlockStateUtils.vanillaBlockStateCount());
     // cache if player can break blocks
     private boolean clientSideCanBreak = true;
+    // 血量缩放：最近一次 UpdateAttributes 包内算出的客户端可见血量上限，-1 表示未知
+    private double clientSideMaxHealth = 20;
     // a cooldown for better breaking experience
     private int lastSuccessfulBreak;
     // player's game tick
     private int gameTicks;
+    // Captured before NMS resets attackStrengthTicker. One primary attack may
+    // synchronously produce several player_attack damage events through sweeping
+    private int capturedAttackStrengthTick = Integer.MIN_VALUE;
+    private float capturedAttackStrength;
     // cache interaction range here
     private int lastUpdateInteractionRangeTick;
     private double cachedInteractionRange;
     // cooldown data
     private CooldownData cooldownData;
     // tracked chunks
-    private ConcurrentLong2ReferenceChainedHashTable<ClientChunk> trackedChunks;
+    private ConcurrentChainedLong2ReferenceHashTable<ClientChunk> trackedChunks;
     // entity view
     private Map<Integer, EntityPacketHandler> entityTypeView;
     // 通过指令或api设定的语言
@@ -198,8 +218,8 @@ public class BukkitServerPlayer extends Player {
     private Locale clientLocale;
     // 跟踪到的方块实体渲染器
     private Map<BlockPos, CullableHolder> trackedBlockEntityRenderers;
+    private Map<BlockPos, CullableHolder> trackedDynamicBlockEntityRenderers;
     private Map<Integer, CullableHolder> trackedEntities;
-    private final EntityCulling culling;
     private Vec3d firstPersonCameraVec3;
     private Vec3d thirdPersonCameraVec3;
     // 是否启用实体剔除
@@ -208,6 +228,8 @@ public class BukkitServerPlayer extends Player {
     private Vec3d eyeLocation;
     // 是否启用家具调试
     private boolean enableFurnitureDebug;
+    // 伤害数字悬浮字可见性
+    private DamageVisibility damageVisibility = Config.damageIndicatorDefaultVisibility();
     // 上一次对准的家具
     private BukkitFurniture lastHitFurniture;
     // 缓存的tick
@@ -238,6 +260,7 @@ public class BukkitServerPlayer extends Player {
     private boolean isSimulatingInteraction;
 
     public BukkitServerPlayer(BukkitCraftEngine plugin, @Nullable Channel channel) {
+        super((WeakReference<Object>) null);
         this.channel = channel;
         this.plugin = plugin;
         if (channel != null) {
@@ -253,8 +276,8 @@ public class BukkitServerPlayer extends Player {
     }
 
     public void setPlayer(org.bukkit.entity.Player player) {
-        this.playerRef = new WeakReference<>(player);
-        this.serverPlayerRef = new WeakReference<>(CraftEntityProxy.INSTANCE.getEntity(player));
+        this.bukkitPlayerRef = new WeakReference<>(player);
+        this.nmsPlayerRef = new WeakReference<>(CraftEntityProxy.INSTANCE.getEntity(player));
         this.uuid = player.getUniqueId();
         this.isUUIDVerified = true;
         this.name = player.getName();
@@ -267,6 +290,7 @@ public class BukkitServerPlayer extends Player {
         this.displayEntityViewDistance = Optional.ofNullable(player.getPersistentDataContainer().get(KeyUtils.toNamespacedKey(DISPLAY_ENTITY_VIEW_DISTANCE_SCALE), PersistentDataType.DOUBLE)).orElse(1d);
         this.enableEntityCulling = Optional.ofNullable(player.getPersistentDataContainer().get(KeyUtils.toNamespacedKey(ENABLE_ENTITY_CULLING), PersistentDataType.BOOLEAN)).orElse(true);
         this.enableFurnitureDebug = Optional.ofNullable(player.getPersistentDataContainer().get(KeyUtils.toNamespacedKey(ENABLE_FURNITURE_DEBUG), PersistentDataType.BOOLEAN)).orElse(false);
+        this.damageVisibility = DamageVisibility.byName(player.getPersistentDataContainer().get(KeyUtils.toNamespacedKey(DAMAGE_VISIBILITY), PersistentDataType.STRING), Config.damageIndicatorDefaultVisibility());
         this.culling.setDistanceScale(Optional.ofNullable(scale).orElse(1.0));
         this.selectedLocale = TranslationManager.parseLocale(locale);
         this.eyeLocation = getEyePos();
@@ -285,16 +309,19 @@ public class BukkitServerPlayer extends Player {
     }
 
     private void initPlayStageFields() {
+        this.capturedAttackStrengthTick = Integer.MIN_VALUE;
+        this.capturedAttackStrength = 0.0F;
         this.trackedBlockEntityRenderers = new ConcurrentHashMap<>(64);
+        this.trackedDynamicBlockEntityRenderers = new ConcurrentHashMap<>(64);
         this.trackedEntities = new ConcurrentHashMap<>(64);
-        this.trackedChunks = ConcurrentLong2ReferenceChainedHashTable.createWithCapacity(512, 0.5f);
-        this.entityTypeView = new ConcurrentHashMap<>(256);
+        this.trackedChunks = ConcurrentChainedLong2ReferenceHashTable.createWithCapacity(128, 0.5f);
+        this.entityTypeView = new ConcurrentHashMap<>(128);
         this.obtainedItems = new HashSet<>(32);
         this.furnitureHitData = new FurnitureHitData();
         this.furnitureLightData = new FurnitureLightData();
         this.receivedMapData = CacheBuilder.newBuilder()
                 .weakKeys()
-                .expireAfterAccess(30, TimeUnit.MINUTES)
+                .expireAfterAccess(Duration.of(30, ChronoUnit.MINUTES))
                 .concurrencyLevel(4)
                 .build();
     }
@@ -325,38 +352,14 @@ public class BukkitServerPlayer extends Player {
     }
 
     @Override
-    public boolean isSneaking() {
-        return platformPlayer().isSneaking();
-    }
-
-    @Override
-    public boolean isSwimming() {
-        return platformPlayer().isSwimming();
-    }
-
-    @Override
-    public boolean isClimbing() {
-        return platformPlayer().isClimbing();
-    }
-
-    @Override
-    public boolean isGliding() {
-        return platformPlayer().isGliding();
-    }
-
-    @Override
     public boolean isFlying() {
         return platformPlayer().isFlying();
     }
 
     @Override
     public GameMode gameMode() {
-        return switch (platformPlayer().getGameMode()) {
-            case CREATIVE -> GameMode.CREATIVE;
-            case SPECTATOR -> GameMode.SPECTATOR;
-            case ADVENTURE -> GameMode.ADVENTURE;
-            case SURVIVAL -> GameMode.SURVIVAL;
-        };
+        Enum<?> gameType = (Enum<?>) ServerPlayerGameModeProxy.INSTANCE.getGameModeForPlayer(ServerPlayerProxy.INSTANCE.getGameMode(this.minecraftPlayer()));
+        return GameMode.VALUES[gameType.ordinal()];
     }
 
     @SuppressWarnings("UnstableApiUsage")
@@ -448,6 +451,16 @@ public class BukkitServerPlayer extends Player {
         return this.gameTicks;
     }
 
+    public void captureAttackStrength(float strength) {
+        this.capturedAttackStrengthTick = this.gameTicks;
+        this.capturedAttackStrength = Math.clamp(strength, 0.0F, 1.0F);
+    }
+
+    public float capturedAttackStrength() {
+        if (this.capturedAttackStrengthTick != this.gameTicks) return 0.0F;
+        return this.capturedAttackStrength;
+    }
+
     @Override
     public boolean hasInteractionInThisTick() {
         return this.gameTicks == this.lastSuccessfulInteraction;
@@ -455,7 +468,7 @@ public class BukkitServerPlayer extends Player {
 
     @Override
     public void swingHand(InteractionHand hand) {
-        platformPlayer().swingHand(hand == InteractionHand.MAIN_HAND ? EquipmentSlot.HAND : EquipmentSlot.OFF_HAND);
+        LivingEntityProxy.INSTANCE.swing(minecraftPlayer(), hand == InteractionHand.MAIN_HAND ? InteractionHandProxy.MAIN_HAND : InteractionHandProxy.OFF_HAND, true);
     }
 
     @Override
@@ -465,7 +478,7 @@ public class BukkitServerPlayer extends Player {
 
     @Override
     public boolean canInstabuild() {
-        Object abilities = PlayerProxy.INSTANCE.getAbilities(serverPlayer());
+        Object abilities = PlayerProxy.INSTANCE.getAbilities(minecraftPlayer());
         return AbilitiesProxy.INSTANCE.isInstantBuild(abilities);
     }
 
@@ -615,8 +628,8 @@ public class BukkitServerPlayer extends Player {
         this.sendPacket(kickPacket, false, () -> ConnectionProxy.INSTANCE.disconnect(this.connection(), reason));
         this.channel.config().setAutoRead(false);
         Runnable handleDisconnection = () -> ConnectionProxy.INSTANCE.handleDisconnection(this.connection());
-        if (VersionHelper.isFolia) {
-            this.plugin.scheduler().platform().run(handleDisconnection);
+        if (VersionHelper.hasFoliaPatch) {
+            this.plugin.scheduler().platform().run(handleDisconnection, null, platformPlayer());
         } else {
             BlockableEventLoopProxy.INSTANCE.scheduleOnMain(MinecraftServerProxy.INSTANCE.getServer(), handleDisconnection);
         }
@@ -624,12 +637,12 @@ public class BukkitServerPlayer extends Player {
 
     @Override
     public ConnectionState decoderState() {
-        return decoderState;
+        return this.decoderState;
     }
 
     @Override
     public ConnectionState encoderState() {
-        return encoderState;
+        return this.encoderState;
     }
 
     @Override
@@ -640,6 +653,14 @@ public class BukkitServerPlayer extends Player {
     @Override
     public void setClientSideWorld(World world) {
         this.clientSideWorld = world;
+    }
+
+    public double clientSideMaxHealth() {
+        return this.clientSideMaxHealth;
+    }
+
+    public void setClientSideMaxHealth(double maxHealth) {
+        this.clientSideMaxHealth = maxHealth;
     }
 
     public void setConnectionState(ConnectionState connectionState) {
@@ -657,7 +678,8 @@ public class BukkitServerPlayer extends Player {
 
     @Override
     public void resendChunks() {
-        Object chunkLoader = ServerPlayerProxy.INSTANCE.getChunkLoader(serverPlayer());
+        if (!VersionHelper.hasPaperPatch) return;
+        Object chunkLoader = ServerPlayerProxy.INSTANCE.getChunkLoader(minecraftPlayer());
         LongOpenHashSet sentChunks = RegionizedPlayerChunkLoaderProxy.PlayerChunkLoaderDataProxy.INSTANCE.getSentChunks(chunkLoader);
         if (sentChunks.isEmpty()) {
             return;
@@ -675,10 +697,9 @@ public class BukkitServerPlayer extends Player {
         }
     }
 
-    @Override
     public void tick() {
         // 还没上线或是已经离线
-        Object serverPlayer = serverPlayer();
+        Object serverPlayer = minecraftPlayer();
         if (serverPlayer == null) return;
 
         // 更新玩家游戏刻
@@ -686,7 +707,7 @@ public class BukkitServerPlayer extends Player {
 
         // 更新CE UI
         if (this.gameTicks % 20 == 0) {
-            this.updateGUI();
+            this.updateGUI(serverPlayer);
         }
 
         // 家具调试模式
@@ -719,7 +740,7 @@ public class BukkitServerPlayer extends Player {
 
         // 更新眼睛位置
         {
-            this.eyeLocation = getEyePos();
+            this.eyeLocation = getEyePos(serverPlayer);
         }
 
         // 本tick内有挥手
@@ -729,24 +750,18 @@ public class BukkitServerPlayer extends Player {
                 // 原版有的，方块挖掘间隔。除非是秒破，否则必走此延迟
                 if (this.gameTicks - this.lastSuccessfulBreak > 5) {
                     if (this.isDestroyingBlock) {
-                        this.tickBlockDestroy();
+                        this.tickBlockDestroy(serverPlayer);
                     } else {
                         // 连续挥手且没被重置
                         if (++this.awfulBreakFixer >= 4) {
                             this.awfulBreakFixer = 0;
-                            RayTraceResult result = rayTrace(new Location(platformPlayer().getWorld(), this.eyeLocation.x, this.eyeLocation.y, this.eyeLocation.z), getCachedInteractionRange(), FluidCollisionMode.NEVER);
-                            if (result != null) {
-                                Entity hitEntity = result.getHitEntity();
-                                if (hitEntity == null) {
-                                    Block hitBlock = result.getHitBlock();
-                                    if (hitBlock != null) {
-                                        Location location = hitBlock.getLocation();
-                                        BlockPos hitPos = new BlockPos(location.getBlockX(), location.getBlockY(), location.getBlockZ());
-                                        Object blockState = BlockStateUtils.getBlockState(hitBlock);
-                                        ImmutableBlockState customState = BlockStateUtils.getOptionalCustomBlockState(blockState).orElse(null);
-                                        this.startMiningBlock(hitPos, blockState, customState);
-                                    }
-                                }
+                            Object hitResult = rayTrace(serverPlayer, getCachedInteractionRange());
+                            if (!BlockHitResultProxy.INSTANCE.isMiss(hitResult)) {
+                                Object blockPos = BlockHitResultProxy.INSTANCE.getBlockPos(hitResult);
+                                BlockPos hitPos = LocationUtils.fromBlockPos(blockPos);
+                                Object blockState = BlockGetterProxy.INSTANCE.getBlockState(EntityProxy.INSTANCE.getLevel(serverPlayer), blockPos);
+                                ImmutableBlockState customState = BlockStateUtils.getOptionalCustomBlockState(blockState).orElse(null);
+                                this.startMiningBlock(hitPos, blockState, customState);
                             }
                         }
                     }
@@ -757,18 +772,17 @@ public class BukkitServerPlayer extends Player {
 
         // 实体剔除更新相机位置
         if (Config.enableEntityCulling()) {
-            org.bukkit.entity.Player player = platformPlayer();
             this.firstPersonCameraVec3 = this.eyeLocation;
             int distance = 4;
             if (VersionHelper.isOrAbove1_21_6) {
-                Entity vehicle = player.getVehicle();
-                if (vehicle != null && vehicle.getType() == EntityType.HAPPY_GHAST) {
+                Object vehicle = EntityProxy.INSTANCE.getVehicle(serverPlayer);
+                if (vehicle != null && EntityProxy.INSTANCE.getType(vehicle) == EntityTypesProxy.HAPPY_GHAST) {
                     distance = 8;
                 }
             }
 
-            float rotX = player.getYaw();
-            float rotY = player.getPitch();
+            float rotX = EntityProxy.INSTANCE.getXRot(serverPlayer);
+            float rotY = EntityProxy.INSTANCE.getYRot(serverPlayer);
             float y = -MiscUtils.sin(MiscUtils.toRadians(rotY));
             float xz = MiscUtils.cos(MiscUtils.toRadians(rotY));
             float x = -xz * MiscUtils.sin(MiscUtils.toRadians(rotX));
@@ -788,11 +802,17 @@ public class BukkitServerPlayer extends Player {
             for (CullableHolder cullableObject : this.trackedBlockEntityRenderers.values()) {
                 cullEntity(useRayTracing, cullableObject);
             }
+            for (CullableHolder cullableObject : this.trackedDynamicBlockEntityRenderers.values()) {
+                cullEntity(useRayTracing, cullableObject);
+            }
             for (CullableHolder cullableObject : this.trackedEntities.values()) {
                 cullEntity(useRayTracing, cullableObject);
             }
         } else {
             for (CullableHolder cullableObject : this.trackedBlockEntityRenderers.values()) {
+                cullableObject.setShown(this, true);
+            }
+            for (CullableHolder cullableObject : this.trackedDynamicBlockEntityRenderers.values()) {
                 cullableObject.setShown(this, true);
             }
             for (CullableHolder cullableObject : this.trackedEntities.values()) {
@@ -802,51 +822,63 @@ public class BukkitServerPlayer extends Player {
     }
 
     private void cullEntity(boolean useRayTracing, CullableHolder cullableObject) {
+        if (cullableObject.forceVisible) {
+            cullableObject.setShown(this, true);
+            return;
+        }
         CullingData cullingData = cullableObject.cullable.cullingData();
-        if (cullingData != null) {
-            boolean firstPersonVisible = this.culling.isVisible(cullingData, this.firstPersonCameraVec3, useRayTracing);
-            // 之前可见
-            if (cullableObject.isShown) {
-                boolean thirdPersonVisible = this.culling.isVisible(cullingData, this.thirdPersonCameraVec3, useRayTracing);
-                if (!firstPersonVisible && !thirdPersonVisible) {
-                    cullableObject.setShown(this, false);
-                }
+        if (cullingData == null) {
+            cullableObject.setShown(this, true);
+            return;
+        }
+        boolean firstPersonVisible = this.culling.isVisible(cullingData, this.firstPersonCameraVec3, useRayTracing);
+        // 之前可见
+        if (cullableObject.isShown) {
+            // 第一人称可见时结果已与第三人称无关
+            if (!firstPersonVisible && !this.culling.isVisible(cullingData, this.thirdPersonCameraVec3, useRayTracing)) {
+                cullableObject.setShown(this, false);
             }
-            // 之前不可见
-            else {
-                // 但是第一人称可见了
-                if (firstPersonVisible) {
-                    // 下次再说
-                    if (Config.enableEntityCullingRateLimiting() && !this.culling.takeToken()) {
-                        return;
-                    }
-                    cullableObject.setShown(this, true);
+        }
+        // 之前不可见
+        else {
+            // 但是第一人称可见了
+            if (firstPersonVisible) {
+                // 下次再说
+                if (Config.enableEntityCullingRateLimiting() && !this.culling.takeToken()) {
                     return;
                 }
-                if (this.culling.isVisible(cullingData, this.thirdPersonCameraVec3, useRayTracing)) {
-                    // 下次再说
-                    if (Config.enableEntityCullingRateLimiting() && !this.culling.takeToken()) {
-                        return;
-                    }
-                    cullableObject.setShown(this, true);
-                }
-                // 仍然不可见
+                cullableObject.setShown(this, true);
+                return;
             }
-        } else {
-            cullableObject.setShown(this, true);
+            if (this.culling.isVisible(cullingData, this.thirdPersonCameraVec3, useRayTracing)) {
+                // 下次再说
+                if (Config.enableEntityCullingRateLimiting() && !this.culling.takeToken()) {
+                    return;
+                }
+                cullableObject.setShown(this, true);
+            }
+            // 仍然不可见
         }
     }
 
-    private void updateGUI() {
-        org.bukkit.inventory.Inventory top = !VersionHelper.isOrAbove1_21 ? LegacyInventoryUtils.getTopInventory(platformPlayer()) : platformPlayer().getOpenInventory().getTopInventory();
-        if (!InventoryUtils.isCustomContainer(top)) return;
-        InventoryHolder topHolder = top.getHolder();
-        if (topHolder instanceof CraftEngineGUIHolder holder) {
-            holder.gui().onTimer();
-        } if (topHolder instanceof WorldlyContainerHolder itemStorage) {
+    private void updateGUI(Object serverPlayer) {
+        Object containerMenu = PlayerProxy.INSTANCE.getContainerMenu(serverPlayer);
+        if (containerMenu == PlayerProxy.INSTANCE.getInventoryMenu(serverPlayer)) return;
+
+        List<Object> slots = AbstractContainerMenuProxy.INSTANCE.getSlots(containerMenu);
+        if (slots.isEmpty()) return;
+        Object container = SlotProxy.INSTANCE.getContainer(slots.getFirst());
+        if (!(container instanceof DelegatingContainer delegatingContainer)) return;
+        if (!(delegatingContainer.getContainer() instanceof BukkitContainer bukkitContainer)) return;
+
+        InventoryHolder holder = bukkitContainer.getOwner();
+        if (holder instanceof CraftEngineGUIHolder guiHolder) {
+            guiHolder.gui().onTimer();
+        }
+        if (holder instanceof WorldlyContainerHolder itemStorage) {
             WorldPosition pos = itemStorage.pos();
             if (!canInteractPoint(pos.toVec3d(), 4d)) {
-                closeInventory();
+                ServerPlayerProxy.INSTANCE.closeContainer(serverPlayer);
             }
         }
     }
@@ -865,7 +897,7 @@ public class BukkitServerPlayer extends Player {
     @Override
     public float getDestroyProgress(Object blockState, BlockPos pos) {
         Optional<ImmutableBlockState> optionalCustomState = BlockStateUtils.getOptionalCustomBlockState(blockState);
-        float progress = BlockBehaviourProxy.BlockStateBaseProxy.INSTANCE.getDestroyProgress(blockState, serverPlayer(), CraftWorldProxy.INSTANCE.getWorld(platformPlayer().getWorld()), LocationUtils.toBlockPos(pos));
+        float progress = BlockBehaviourProxy.BlockStateBaseProxy.INSTANCE.getDestroyProgress(blockState, minecraftPlayer(), CraftWorldProxy.INSTANCE.getWorld(platformPlayer().getWorld()), LocationUtils.toBlockPos(pos));
         if (optionalCustomState.isPresent()) {
             ImmutableBlockState customState = optionalCustomState.get();
             Item tool = getItemInHand(InteractionHand.MAIN_HAND);
@@ -892,7 +924,7 @@ public class BukkitServerPlayer extends Player {
         } else {
             BlockPos previousPos = this.destroyPos;
             if (previousPos != null && !pos.equals(previousPos)) {
-                this.broadcastDestroyProgress(previousPos, -1);
+                this.broadcastDestroyProgress(previousPos, -1f);
             }
             this.destroyPos = pos;
             this.destroyedState = state;
@@ -939,7 +971,7 @@ public class BukkitServerPlayer extends Player {
         }
         this.clientSideCanBreak = canBreak;
         if (VersionHelper.isOrAbove1_20_5) {
-            Object serverPlayer = serverPlayer();
+            Object serverPlayer = minecraftPlayer();
             Object attributeInstance = LivingEntityProxy.INSTANCE.getAttribute(serverPlayer, AttributesProxy.BLOCK_BREAK_SPEED);
             sendPacket(ClientboundUpdateAttributesPacketProxy.INSTANCE.newInstance$0(entityId(), Lists.newArrayList(attributeInstance)), true);
         } else {
@@ -957,6 +989,7 @@ public class BukkitServerPlayer extends Player {
     // 客户端完成破坏方块
     @Override
     public void finishMiningBlock() {
+        clearActiveDestroyProgress(false);
         this.miningProgress = 0f;
         this.isDestroyingBlock = false;
         this.swingHandAck = false;
@@ -969,6 +1002,7 @@ public class BukkitServerPlayer extends Player {
     // 通过丢弃物品/右键方块/右键实体触发，会给几tick的挖掘冷却期
     @Override
     public void stopMiningBlock() {
+        clearActiveDestroyProgress(false);
         this.miningProgress = 0f;
         this.isDestroyingBlock = false;
         this.swingHandAck = false;
@@ -990,7 +1024,7 @@ public class BukkitServerPlayer extends Player {
         BlockPos pos = this.destroyPos;
         if (pos != null && this.isDestroyingCustomBlock) {
             // 只纠正自定义方块的破坏进度
-            this.broadcastDestroyProgress(pos, -1);
+            this.broadcastDestroyProgress(pos, -1f);
         }
     }
 
@@ -1010,7 +1044,7 @@ public class BukkitServerPlayer extends Player {
     }
 
     private void resetEffect(Object mobEffect) {
-        Object effectInstance = ServerPlayerProxy.INSTANCE.getEffect$legacy(serverPlayer(), mobEffect);
+        Object effectInstance = ServerPlayerProxy.INSTANCE.getEffect$legacy(minecraftPlayer(), mobEffect);
         Object packet;
         if (effectInstance != null) {
             packet = ClientboundUpdateMobEffectPacketProxy.INSTANCE.newInstance(entityId(), effectInstance);
@@ -1020,32 +1054,23 @@ public class BukkitServerPlayer extends Player {
         sendPacket(packet, true);
     }
 
-    private void tickBlockDestroy() {
+    private void tickBlockDestroy(Object serverPlayer) {
         int currentTick = gameTicks();
-        // 如果没有正在被挖掘的对象，那么不继续
         Object destroyedState = this.destroyedState;
         if (destroyedState == null) return;
 
         // 进行实现追踪找到指向的方块
-        org.bukkit.entity.Player player = platformPlayer();
-        double range = getCachedInteractionRange();
-        RayTraceResult result = rayTrace(new Location(player.getWorld(), this.eyeLocation.x, this.eyeLocation.y, this.eyeLocation.z, yRot(), xRot()), range, FluidCollisionMode.NEVER);
-        if (result == null) return;
-        if (result.getHitEntity() != null) return;
-        Block hitBlock = result.getHitBlock();
-        if (hitBlock == null) return;
-        Location location = hitBlock.getLocation();
-        BlockPos hitPos = new BlockPos(location.getBlockX(), location.getBlockY(), location.getBlockZ());
+        Object hitResult = rayTrace(serverPlayer, getCachedInteractionRange());
+        if (BlockHitResultProxy.INSTANCE.isMiss(hitResult)) return;
+        Object blockPos = BlockHitResultProxy.INSTANCE.getBlockPos(hitResult);
+        BlockPos hitPos = LocationUtils.fromBlockPos(blockPos);
         // 如果命中点位和网络包设置的不同，那么不继续tick
         if (!hitPos.equals(this.destroyPos)) {
-            Object blockState = BlockStateUtils.getBlockState(hitBlock);
+            Object blockState = BlockGetterProxy.INSTANCE.getBlockState(EntityProxy.INSTANCE.getLevel(serverPlayer), blockPos);
             ImmutableBlockState customState = BlockStateUtils.getOptionalCustomBlockState(blockState).orElse(null);
             this.startMiningBlock(hitPos, blockState, customState);
             return;
         }
-
-        Object blockPos = LocationUtils.toBlockPos(hitPos);
-        Object serverPlayer = serverPlayer();
 
         // check item in hand
         BukkitItem item = this.getItemInHand(InteractionHand.MAIN_HAND);
@@ -1053,11 +1078,17 @@ public class BukkitServerPlayer extends Player {
         // 发送破坏中音效
         if (currentTick - this.lastHitBlockTime > 3) {
             // 手上物品不是debug棒
-            if (!BukkitItemUtils.isDebugStick(item)) {
+            if (!BukkitItemUtils.isDebugStick(item) && !canInstabuild()) {
                 Object soundType = BlockBehaviourProxy.BlockStateBaseProxy.INSTANCE.getSoundType(destroyedState);
                 Object soundEvent = SoundTypeProxy.INSTANCE.getHitSound(soundType);
-                Object soundId = SoundEventProxy.INSTANCE.getLocation(soundEvent);
-                player.playSound(location, soundId.toString(), SoundCategory.BLOCKS, 0.5F, 0.5F);
+                Object soundPacket = ClientboundSoundPacketProxy.INSTANCE.newInstance(
+                        HolderProxy.INSTANCE.direct(soundEvent),
+                        SoundSourceProxy.BLOCKS,
+                        hitPos.x(), hitPos.y(), hitPos.z(),
+                        0.5F, 0.5F,
+                        RandomUtils.generateRandomLong()
+                );
+                sendPacket(soundPacket, true);
             }
             this.lastHitBlockTime = currentTick;
         }
@@ -1081,12 +1112,8 @@ public class BukkitServerPlayer extends Player {
                 ImmutableBlockState customState = optionalCustomState.get();
                 // accumulate progress
                 this.miningProgress = progressToAdd + miningProgress;
-                int packetStage = (int) (this.miningProgress * 10.0F);
-                if (packetStage != this.lastSentState) {
-                    this.lastSentState = packetStage;
-                    // broadcast changes
-                    broadcastDestroyProgress(hitPos, packetStage);
-                }
+                // broadcast changes; dedup (vanilla 0~10 stage or custom item index) happens inside
+                broadcastDestroyProgress(hitPos, this.miningProgress);
 
                 // can break now
                 if (this.miningProgress >= 1f) {
@@ -1111,6 +1138,7 @@ public class BukkitServerPlayer extends Player {
                     // send break particle + (removed sounds)
                     if (breakResult) {
                         sendPacket(ClientboundLevelEventPacketProxy.INSTANCE.newInstance(WorldEvents.BLOCK_BREAK_EFFECT, blockPos, customState.customBlockState().registryId(), false), false);
+                        clearActiveDestroyProgress(true);
                         this.destroyPos = null;
                         this.miningProgress = 0;
                         this.isDestroyingBlock = false;
@@ -1119,6 +1147,7 @@ public class BukkitServerPlayer extends Player {
                         this.isDestroyingCustomBlock = false;
                     } else {
                         // 事件被取消了，重置挖掘进度
+                        clearDestroyStageDisplay();
                         this.miningProgress = 0;
                         this.isDestroyingCustomBlock = true;
                         this.isDestroyingBlock = true;
@@ -1137,35 +1166,170 @@ public class BukkitServerPlayer extends Player {
         platformPlayer().breakBlock(new Location(platformPlayer().getWorld(), x, y, z).getBlock());
     }
 
-    @SuppressWarnings("deprecation")
-    private void broadcastDestroyProgress(BlockPos hitPos, int stage) {
+    private void broadcastDestroyProgress(BlockPos hitPos, float progress) {
+        DestroyStageDisplayEntitySetting display = currentDestroyStageDisplay();
+        int key = progress < 0 ? -1 : (display != null ? display.itemIndexForProgress(progress) : (int) (progress * 10.0F));
+        if (key == this.lastSentState) {
+            return;
+        }
+        this.lastSentState = key;
+        if (display != null) {
+            broadcastDestroyProgressViaDisplay(hitPos, progress, display);
+        } else {
+            broadcastDestroyProgressVanilla(hitPos, key);
+        }
+    }
+
+    private DestroyStageDisplayEntitySetting currentDestroyStageDisplay() {
+        Object state = this.destroyedState;
+        if (state == null) return null;
+        ImmutableBlockState customState = BlockStateUtils.getOptionalCustomBlockState(state).orElse(null);
+        if (customState == null) return null;
+        return customState.settings().destroyStageDisplay();
+    }
+
+    private void broadcastDestroyProgressVanilla(BlockPos hitPos, int stage) {
         Object packet = ClientboundBlockDestructionPacketProxy.INSTANCE.newInstance(Integer.MAX_VALUE - entityId(), LocationUtils.toBlockPos(hitPos), stage);
         sendPacket(packet, false);
-        for (org.bukkit.entity.Player other : platformPlayer().getTrackedPlayers()) {
-            double d0 = (double) hitPos.x() - other.getX();
-            double d1 = (double) hitPos.y() - other.getY();
-            double d2 = (double) hitPos.z() - other.getZ();
-            if (d0 * d0 + d1 * d1 + d2 * d2 < 32 * 32) {
-                BukkitServerPlayer serverPlayer = BukkitAdaptor.adapt(other);
-                if (serverPlayer == null) continue;
-                serverPlayer.sendPacket(packet, false);
+        for (Player other : getTrackedBy()) {
+            if (!isWithinDestroyRange(hitPos, other)) continue;
+            other.sendPacket(packet, false);
+        }
+    }
+
+    /**
+     * Clears the destruction overlay before the tracked position/state is discarded.
+     * Vanilla crack overlays are keyed by breaker id and survive a block replacement;
+     * without an explicit reset, a newly placed block at the same position inherits
+     * the final crack stage until another update happens.
+     */
+    private void clearActiveDestroyProgress(boolean clearAllDisplayMiners) {
+        BlockPos position = this.destroyPos;
+        if (position == null || !this.isDestroyingCustomBlock) {
+            clearDestroyStageDisplay();
+            this.lastSentState = -1;
+            return;
+        }
+
+        if (currentDestroyStageDisplay() != null) {
+            if (clearAllDisplayMiners) {
+                clearDestroyStageDisplayForAll();
+            } else {
+                clearDestroyStageDisplay();
+            }
+        } else {
+            broadcastDestroyProgressVanilla(position, -1);
+        }
+        this.lastSentState = -1;
+    }
+
+    public void broadcastDestroyProgressViaDisplay(BlockPos hitPos, float progress, DestroyStageDisplayEntitySetting display) {
+        if (progress < 0) {
+            clearDestroyStageDisplay();
+            return;
+        }
+        DestroyStageDisplayRecorder.PosKey posKey = new DestroyStageDisplayRecorder.PosKey(platformPlayer().getWorld().getUID(), hitPos.asLong());
+        DestroyStageDisplayRecorder.Entry entry = BukkitDestroyStageDisplayRecorder.INSTANCE.getOrCreate(posKey, display, hitPos);
+        this.destroyStageEntry = entry;
+
+        entry.minerProgress.put(this.uuid, progress);
+        float maxProgress = 0f;
+        for (Float p : entry.minerProgress.values()) {
+            if (p != null && p > maxProgress) maxProgress = p;
+        }
+        int newIndex = display.itemIndexForProgress(maxProgress);
+        if (newIndex == entry.displayedIndex()) {
+            return;
+        }
+        entry.displayedIndex(newIndex);
+
+        DestroyStageDisplayEntity entity = entry.entity;
+        Set<UUID> current = new HashSet<>();
+        current.add(this.uuid);
+        Set<Player> trackedPlayers = getTrackedBy();
+        for (Player other : trackedPlayers) {
+            if (isWithinDestroyRange(hitPos, other)) {
+                current.add(other.uuid());
             }
         }
+        Object removePacket = entity.removePacket();
+        entity.removeLeftViewers(current, viewerId -> {
+            if (viewerId.equals(this.uuid)) return;
+            BukkitServerPlayer serverPlayer = BukkitNetworkManager.instance().getOnlineUser(viewerId);
+            if (serverPlayer == null) return;
+            serverPlayer.sendPacket(removePacket, false);
+        });
+        showDestroyStageDisplayTo(this, entity, newIndex);
+        for (Player other : trackedPlayers) {
+            if (!isWithinDestroyRange(hitPos, other)) continue;
+            showDestroyStageDisplayTo(other, entity, newIndex);
+        }
+    }
+
+    private void showDestroyStageDisplayTo(Player viewer, DestroyStageDisplayEntity entity, int index) {
+        entity.ensureSpawned(viewer, index, packet -> viewer.sendPacket(packet, false));
+    }
+
+    public void clearDestroyStageDisplay() {
+        DestroyStageDisplayRecorder.Entry entry = this.destroyStageEntry;
+        if (entry == null) return;
+        DestroyStageDisplayEntity entity = entry.entity;
+        this.destroyStageEntry = null;
+        this.lastSentState = -1;
+        entry.minerProgress.remove(this.uuid);
+        if (entry.minerProgress.isEmpty()) {
+            BukkitDestroyStageDisplayRecorder.INSTANCE.remove(entry.key);
+        } else {
+            float maxProgress = 0f;
+            for (Float p : entry.minerProgress.values()) {
+                if (p != null && p > maxProgress) maxProgress = p;
+            }
+            int newIndex = entry.display.itemIndexForProgress(maxProgress);
+            if (newIndex != entry.displayedIndex()) {
+                entry.displayedIndex(newIndex);
+                for (UUID viewerId : entity.spawnedViewers()) {
+                    BukkitServerPlayer serverPlayer = (BukkitServerPlayer) this.plugin.networkManager().getOnlineUser(viewerId);
+                    if (serverPlayer == null) continue;
+                    showDestroyStageDisplayTo(serverPlayer, entity, newIndex);
+                }
+            }
+        }
+    }
+
+    public void clearDestroyStageDisplayForAll() {
+        DestroyStageDisplayRecorder.Entry entry = this.destroyStageEntry;
+        if (entry == null) {
+            return;
+        }
+        for (UUID minerId : entry.minerProgress.keys()) {
+            BukkitServerPlayer serverPlayer = (BukkitServerPlayer) this.plugin.networkManager().getOnlineUser(minerId);
+            if (serverPlayer == null) continue;
+            serverPlayer.destroyStageEntry = null;
+            serverPlayer.lastSentState = -1;
+        }
+        BukkitDestroyStageDisplayRecorder.INSTANCE.remove(entry.key);
+    }
+
+    private boolean isWithinDestroyRange(BlockPos hitPos, Player other) {
+        double d0 = (double) hitPos.x() - other.x();
+        double d1 = (double) hitPos.y() - other.y();
+        double d2 = (double) hitPos.z() - other.z();
+        return d0 * d0 + d1 * d1 + d2 * d2 < 32 * 32;
     }
 
     @Override
     public double getCachedInteractionRange() {
         if (VersionHelper.isOrAbove1_20_5) {
-            if (this.lastUpdateInteractionRangeTick + 20 > gameTicks()) {
+            if (this.lastUpdateInteractionRangeTick + 20 > this.gameTicks) {
                 return this.cachedInteractionRange;
             }
-            Object attribute = LivingEntityProxy.INSTANCE.getAttribute(serverPlayer(), AttributesProxy.BLOCK_INTERACTION_RANGE);
+            Object attribute = LivingEntityProxy.INSTANCE.getAttribute(minecraftPlayer(), AttributesProxy.BLOCK_INTERACTION_RANGE);
             if (attribute == null) {
                 this.cachedInteractionRange = 4.5d;
             } else {
                 this.cachedInteractionRange = AttributeInstanceProxy.INSTANCE.getValue(attribute);
             }
-            this.lastUpdateInteractionRangeTick = gameTicks();
+            this.lastUpdateInteractionRangeTick = this.gameTicks;
             return this.cachedInteractionRange;
         } else {
             return 4.5d;
@@ -1196,12 +1360,12 @@ public class BukkitServerPlayer extends Player {
 
     @Override
     public float yRot() {
-        return platformPlayer().getYaw();
+        return EntityProxy.INSTANCE.getYRot(this.minecraftPlayer());
     }
 
     @Override
     public float xRot() {
-        return platformPlayer().getPitch();
+        return EntityProxy.INSTANCE.getXRot(this.minecraftPlayer());
     }
 
     @Override
@@ -1214,27 +1378,6 @@ public class BukkitServerPlayer extends Player {
         return DirectionUtils.toDirection(platformPlayer().getFacing());
     }
 
-    @NotNull
-    @Override
-    public BukkitItem getItemInHand(InteractionHand hand) {
-        PlayerInventory inventory = platformPlayer().getInventory();
-        return BukkitItemManager.instance().wrap(hand == InteractionHand.MAIN_HAND ? inventory.getItemInMainHand() : inventory.getItemInOffHand());
-    }
-
-    @NotNull
-    @Override
-    public BukkitItem getItemBySlot(int slot) {
-        PlayerInventory inventory = platformPlayer().getInventory();
-        return BukkitItemManager.instance().wrap(inventory.getItem(slot));
-    }
-
-    @Override
-    public void setItemInHand(InteractionHand hand, Item item) {
-        PlayerInventory inventory = platformPlayer().getInventory();
-        EquipmentSlot slot = hand == InteractionHand.MAIN_HAND ? EquipmentSlot.HAND : EquipmentSlot.OFF_HAND;
-        inventory.setItem(slot, ((BukkitItem) item).getBukkitItem());
-    }
-
     @Override
     public World world() {
         return BukkitAdaptor.adapt(platformPlayer().getWorld());
@@ -1242,35 +1385,35 @@ public class BukkitServerPlayer extends Player {
 
     @Override
     public double x() {
-        return platformPlayer().getX();
+        return EntityProxy.INSTANCE.getX(minecraftPlayer());
     }
 
     @Override
     public double y() {
-        return platformPlayer().getY();
+        return EntityProxy.INSTANCE.getY(minecraftPlayer());
     }
 
     @Override
     public double z() {
-        return platformPlayer().getZ();
+        return EntityProxy.INSTANCE.getZ(minecraftPlayer());
     }
 
     @Override
-    public Object serverPlayer() {
-        if (serverPlayerRef == null) return null;
-        return serverPlayerRef.get();
+    public Object minecraftPlayer() {
+        if (this.nmsPlayerRef == null) return null;
+        return this.nmsPlayerRef.get();
     }
 
     @Override
     public org.bukkit.entity.Player platformPlayer() {
-        if (playerRef == null) return null;
-        return playerRef.get();
+        if (this.bukkitPlayerRef == null) return null;
+        return this.bukkitPlayerRef.get();
     }
 
     @Override
     public ChannelHandler connection() {
         if (this.connection == null) {
-            Object serverPlayer = serverPlayer();
+            Object serverPlayer = minecraftPlayer();
             if (serverPlayer != null) {
                 if (VersionHelper.isOrAbove1_20_2) {
                     this.connection = ServerCommonPacketListenerImplProxy.INSTANCE.getConnection(ServerPlayerProxy.INSTANCE.getConnection(serverPlayer));
@@ -1295,8 +1438,8 @@ public class BukkitServerPlayer extends Player {
     }
 
     @Override
-    public Object serverEntity() {
-        return serverPlayer();
+    public Object minecraftEntity() {
+        return minecraftPlayer();
     }
 
     @Override
@@ -1388,8 +1531,10 @@ public class BukkitServerPlayer extends Player {
     }
 
     @Override
-    public void clearView() {
+    public void clearEntityView() {
         this.entityTypeView.clear();
+        // 玩家自身实体的包处理器不随视野清空（重生/切世界后仍需要血量 metadata 缩放等处理）
+        this.entityTypeView.put(this.entityId, PlayerPacketHandler.INSTANCE);
     }
 
     @Override
@@ -1431,31 +1576,26 @@ public class BukkitServerPlayer extends Player {
     }
 
     @Override
-    public double luck() {
-        if (VersionHelper.isOrAbove1_21_3) {
-            return Optional.ofNullable(platformPlayer().getAttribute(Attribute.LUCK)).map(AttributeInstance::getValue).orElse(1d);
-        } else {
-            return LegacyAttributeUtils.getLuck(platformPlayer());
+    public void transfer(String server) {
+        org.bukkit.entity.Player player = platformPlayer();
+        if (player == null) return;
+        ByteArrayOutputStream byteArray = new ByteArrayOutputStream();
+        DataOutputStream out = new DataOutputStream(byteArray);
+        try {
+            out.writeUTF("Connect");
+            out.writeUTF(server);
+        } catch (IOException e) {
+            this.plugin.logger().warn("Failed to encode transfer data for " + this.name(), e);
+            return;
         }
+        player.sendPluginMessage(this.plugin.javaPlugin(), "BungeeCord", byteArray.toByteArray());
     }
 
     @Override
-    public double health() {
-        return platformPlayer().getHealth();
-    }
-
-    @Override
-    public void setHealth(double amount) {
-        platformPlayer().setHealth(amount);
-    }
-
-    @Override
-    public double maxHealth() {
-        if (VersionHelper.isOrAbove1_21) {
-            return Objects.requireNonNull(platformPlayer().getAttribute(Attribute.MAX_HEALTH)).getValue();
-        } else {
-            return LegacyAttributeUtils.getMaxHealth(platformPlayer());
-        }
+    public void transfer(String host, int port) {
+        org.bukkit.entity.Player player = platformPlayer();
+        if (player == null) return;
+        player.transfer(host, port);
     }
 
     @Override
@@ -1465,7 +1605,7 @@ public class BukkitServerPlayer extends Player {
 
     @Override
     public void setFoodLevel(int foodLevel) {
-        this.platformPlayer().setFoodLevel(Math.min(Math.max(0, foodLevel), 20));
+        this.platformPlayer().setFoodLevel(Math.clamp(foodLevel, 0, 20));
     }
 
     @Override
@@ -1476,25 +1616,6 @@ public class BukkitServerPlayer extends Player {
     @Override
     public void setSaturation(float saturation) {
         this.platformPlayer().setSaturation(saturation);
-    }
-
-    @Override
-    public void addPotionEffect(Key potionEffectType, int duration, int amplifier, boolean ambient, boolean particles) {
-        PotionEffectType type = Registry.POTION_EFFECT_TYPE.get(KeyUtils.toNamespacedKey(potionEffectType));
-        if (type == null) return;
-        this.platformPlayer().addPotionEffect(new PotionEffect(type, duration, amplifier, ambient, particles));
-    }
-
-    @Override
-    public void removePotionEffect(Key potionEffectType) {
-        PotionEffectType type = Registry.POTION_EFFECT_TYPE.get(KeyUtils.toNamespacedKey(potionEffectType));
-        if (type == null) return;
-        this.platformPlayer().removePotionEffect(type);
-    }
-
-    @Override
-    public void clearPotionEffects() {
-        this.platformPlayer().clearActivePotionEffects();
     }
 
     @Override
@@ -1528,39 +1649,6 @@ public class BukkitServerPlayer extends Player {
     @Override
     public void clearTrackedChunks() {
         this.trackedChunks.clear();
-    }
-
-    @Override
-    public void teleport(WorldPosition worldPosition) {
-        Location location = new Location((org.bukkit.World) worldPosition.world().platformWorld(), worldPosition.x(), worldPosition.y(), worldPosition.z(), worldPosition.yRot(), worldPosition.xRot());
-        this.platformPlayer().teleportAsync(location, PlayerTeleportEvent.TeleportCause.PLUGIN);
-    }
-
-    @Override
-    public void damage(double amount, Key damageType, @Nullable Object causeEntity) {
-        @SuppressWarnings("deprecation")
-        DamageType type = Registry.DAMAGE_TYPE.get(KeyUtils.toNamespacedKey(damageType));
-        DamageSource source = DamageSource.builder(type != null ? type : DamageType.GENERIC)
-                .withCausingEntity(causeEntity instanceof Entity entity ? entity : this.platformPlayer())
-                .withDirectEntity(this.platformPlayer())
-                .withDamageLocation(this.platformPlayer().getLocation())
-                .build();
-        this.platformPlayer().damage(amount, source);
-    }
-
-    @Override
-    public Object entityData() {
-        return EntityProxy.INSTANCE.getEntityData(serverEntity());
-    }
-
-    @Override
-    public <T> T getEntityData(EntityData<T> data) {
-        return SynchedEntityDataProxy.INSTANCE.get(entityData(), data.entityDataAccessor());
-    }
-
-    @Override
-    public <T> void setEntityData(EntityData<T> data, T value, boolean force) {
-        SynchedEntityDataProxy.INSTANCE.set(entityData(), data.entityDataAccessor(), value, force);
     }
 
     @Override
@@ -1600,14 +1688,19 @@ public class BukkitServerPlayer extends Player {
 
     @Override
     public void setEntityCullingDistanceScale(double value) {
-        value = Math.min(Math.max(0.125, value), 8);
+        value = Math.clamp(value, 0.125, 8);
         this.culling.setDistanceScale(value);
         platformPlayer().getPersistentDataContainer().set(KeyUtils.toNamespacedKey(ENTITY_CULLING_DISTANCE_SCALE), PersistentDataType.DOUBLE, value);
     }
 
     @Override
+    public double entityCullingDistanceScale() {
+        return this.culling.distanceScale();
+    }
+
+    @Override
     public void setDisplayEntityViewDistanceScale(double value) {
-        value = Math.min(Math.max(0.125, value), 8);
+        value = Math.clamp(value, 0.125, 8);
         this.displayEntityViewDistance = value;
         platformPlayer().getPersistentDataContainer().set(KeyUtils.toNamespacedKey(DISPLAY_ENTITY_VIEW_DISTANCE_SCALE), PersistentDataType.DOUBLE, value);
     }
@@ -1626,6 +1719,17 @@ public class BukkitServerPlayer extends Player {
     @Override
     public boolean enableEntityCulling() {
         return this.enableEntityCulling;
+    }
+
+    @Override
+    public DamageVisibility damageVisibility() {
+        return this.damageVisibility;
+    }
+
+    @Override
+    public void setDamageVisibility(DamageVisibility visibility) {
+        this.damageVisibility = visibility;
+        platformPlayer().getPersistentDataContainer().set(KeyUtils.toNamespacedKey(DAMAGE_VISIBILITY), PersistentDataType.STRING, visibility.name());
     }
 
     @Override
@@ -1651,7 +1755,7 @@ public class BukkitServerPlayer extends Player {
 
     @Override
     public int getXpNeededForNextLevel() {
-        return platformPlayer().getExperiencePointsNeededForNextLevel();
+        return PlayerProxy.INSTANCE.getXpNeededForNextLevel(minecraftPlayer());
     }
 
     @Override
@@ -1710,13 +1814,50 @@ public class BukkitServerPlayer extends Player {
     @Override
     public void clearTrackedBlockEntities() {
         this.trackedBlockEntityRenderers.clear();
+        this.trackedDynamicBlockEntityRenderers.clear();
+    }
+
+    @Override
+    public void addTrackedDynamicBlockEntities(Map<BlockPos, DynamicBlockEntityRenderer> renderers) {
+        for (Map.Entry<BlockPos, DynamicBlockEntityRenderer> entry : renderers.entrySet()) {
+            this.addTrackedDynamicBlockEntity(entry.getKey(), entry.getValue());
+        }
+    }
+
+    @Override
+    public void addTrackedDynamicBlockEntity(BlockPos blockPos, DynamicBlockEntityRenderer renderer) {
+        CullableHolder holder = new CullableHolder(renderer, renderer.initialForceVisible(this));
+        this.trackedDynamicBlockEntityRenderers.put(blockPos, holder);
+        if (holder.forceVisible) {
+            holder.setShown(this, true);
+        }
+    }
+
+    @Override
+    public CullableHolder getTrackedDynamicBlockEntity(BlockPos blockPos) {
+        return this.trackedDynamicBlockEntityRenderers.get(blockPos);
+    }
+
+    @Override
+    public void removeTrackedDynamicBlockEntities(Collection<BlockPos> renders) {
+        for (BlockPos render : renders) {
+            this.removeTrackedDynamicBlockEntity(render);
+        }
+    }
+
+    @Override
+    public void removeTrackedDynamicBlockEntity(BlockPos pos) {
+        CullableHolder remove = this.trackedDynamicBlockEntityRenderers.remove(pos);
+        if (remove != null && remove.isShown) {
+            remove.cullable.hide(this);
+        }
     }
 
     @Override
     public int clearOrCountMatchingInventoryItems(Predicate<Item> predicate, int count) {
-        Predicate<Object> nmsPredicate = nmsStack -> predicate.test(this.plugin.itemManager().wrap(ItemStackUtils.asCraftMirror(nmsStack)));
-        Object inventory = PlayerProxy.INSTANCE.getInventory(serverPlayer());
-        Object inventoryMenu = PlayerProxy.INSTANCE.getInventoryMenu(serverPlayer());
+        Predicate<Object> nmsPredicate = nmsStack -> predicate.test(this.plugin.itemManager().wrap(ItemStackUtils.getBukkitStack(nmsStack)));
+        Object inventory = PlayerProxy.INSTANCE.getInventory(minecraftPlayer());
+        Object inventoryMenu = PlayerProxy.INSTANCE.getInventoryMenu(minecraftPlayer());
         Object craftSlots = InventoryMenuProxy.INSTANCE.getCraftSlots(inventoryMenu);
         return InventoryProxy.INSTANCE.clearOrCountMatchingItems(inventory, nmsPredicate, count, craftSlots);
     }
@@ -1753,11 +1894,6 @@ public class BukkitServerPlayer extends Player {
     }
 
     @Override
-    public WorldPosition eyePosition() {
-        return LocationUtils.toWorldPosition(this.getEyeLocation());
-    }
-
-    @Override
     public Cache<Object, Boolean> receivedMapData() {
         return this.receivedMapData;
     }
@@ -1771,33 +1907,31 @@ public class BukkitServerPlayer extends Player {
     public void playParticle(Key particleId, double x, double y, double z) {
         Particle particle = Registry.PARTICLE_TYPE.get(KeyUtils.toNamespacedKey(particleId));
         if (particle != null) {
-            platformPlayer().getWorld().spawnParticle(particle, List.of(platformPlayer()), null, x, y, z, 1, 0, 0,0, 0, null, false);
+            if (VersionHelper.hasPaperPatch) {
+                platformPlayer().getWorld().spawnParticle(particle, List.of(platformPlayer()), null, x, y, z, 1, 0, 0, 0, 0, null, false);
+            } else {
+                platformPlayer().spawnParticle(particle, x, y, z, 1, 0, 0, 0, 0);
+            }
         }
     }
 
-    public Location getEyeLocation() {
-        Object serverPlayer = serverPlayer();
-        Object vehicle = EntityProxy.INSTANCE.getVehicle(serverPlayer);
-        if (vehicle != null) {
-            Vec3d mountPos = EntityUtils.getPassengerRidingPosition(vehicle, serverPlayer);
-            return new Location(platformPlayer().getWorld(), mountPos.x, mountPos.y + EntityProxy.INSTANCE.getEyeHeight(serverPlayer), mountPos.z);
-        }
-        return platformPlayer().getEyeLocation();
-    }
-
-    public Vec3d getEyePos() {
-        Object serverPlayer = serverPlayer();
-        Object vehicle = EntityProxy.INSTANCE.getVehicle(serverPlayer);
-        if (vehicle != null) {
-            Vec3d mountPos = EntityUtils.getPassengerRidingPosition(vehicle, serverPlayer);
-            return new Vec3d(mountPos.x, mountPos.y + EntityProxy.INSTANCE.getEyeHeight(serverPlayer), mountPos.z);
-        } else {
-            return new Vec3d(EntityProxy.INSTANCE.getXo(serverPlayer), EntityProxy.INSTANCE.getEyeY(serverPlayer), EntityProxy.INSTANCE.getZo(serverPlayer));
-        }
-    }
-
-    private RayTraceResult rayTrace(Location start, double range, FluidCollisionMode mode) {
-        return start.getWorld().rayTraceBlocks(start, start.getDirection(), range, mode);
+    private Object rayTrace(Object serverPlayer, double range) {
+        Object start = Vec3Proxy.INSTANCE.newInstance(this.eyeLocation.x, this.eyeLocation.y, this.eyeLocation.z);
+        Object direction = EntityProxy.INSTANCE.getLookAngle(serverPlayer);
+        Object end = Vec3Proxy.INSTANCE.add(
+                start,
+                Vec3Proxy.INSTANCE.getX(direction) * range,
+                Vec3Proxy.INSTANCE.getY(direction) * range,
+                Vec3Proxy.INSTANCE.getZ(direction) * range
+        );
+        Object context = ClipContextProxy.INSTANCE.newInstance(
+                start,
+                end,
+                ClipContextProxy.BlockProxy.OUTLINE,
+                ClipContextProxy.FluidProxy.NONE,
+                serverPlayer
+        );
+        return BlockGetterProxy.INSTANCE.clip(EntityProxy.INSTANCE.getLevel(serverPlayer), context);
     }
 
     public Map<BlockPos, CullableHolder> trackedBlockEntityRenderers() {
@@ -1870,7 +2004,7 @@ public class BukkitServerPlayer extends Player {
     @Override
     public void setItemCooldown(Key id, int ticks) {
         if (VersionHelper.isOrAbove1_21_2) {
-            Object serverPlayer = serverPlayer();
+            Object serverPlayer = minecraftPlayer();
             Object cooldowns = PlayerProxy.INSTANCE.getCooldowns(serverPlayer);
             ItemCooldownsProxy.INSTANCE.addCooldown(cooldowns, KeyUtils.toIdentifier(id), ticks);
         }
@@ -1879,7 +2013,7 @@ public class BukkitServerPlayer extends Player {
     @Override
     public int getItemCooldown(Key id) {
         if (VersionHelper.isOrAbove1_21_2) {
-            Object serverPlayer = serverPlayer();
+            Object serverPlayer = minecraftPlayer();
             Object cooldowns = PlayerProxy.INSTANCE.getCooldowns(serverPlayer);
             Map<Object, Object> instanceById = ItemCooldownsProxy.INSTANCE.getCooldowns(cooldowns);
             Object instance = instanceById.get(KeyUtils.toIdentifier(id));
@@ -1888,5 +2022,12 @@ public class BukkitServerPlayer extends Player {
             }
         }
         return 0;
+    }
+
+    @NotNull
+    @Override
+    public BukkitItem getItemBySlot(int slot) {
+        PlayerInventory inventory = platformPlayer().getInventory();
+        return BukkitItemManager.instance().wrap(inventory.getItem(slot));
     }
 }
